Bug 1776280 - Make folder cache store properties retrieved from DB. r=benc